[package]
name = "brwry-cellar"
description = "Brwry cellar on-chain program. Creates vesting casks and releases them along a curve."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "brwry_cellar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token_2022"] }
brwry-curves = { path = "../brwry-curves", default-features = false }
