[package]
name = "brwry-curves"
description = "Unlock curve math shared between the Brwry cellar program and the off-chain designer."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "brwry_curves"
path = "src/lib.rs"

[[bin]]
name = "cask_cli"
path = "src/bin/cask_cli.rs"
